[package]
name = "ksfc-lxi"
version = "0.2.1"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

[lib]
name = "ksfc_lxi"
path = "src/lib.rs"

[[bin]]
name = "dev_test"
path = "src/main.rs"

[dependencies]
ks-lxi = { git = "https://github.com/binp-automation/ks-lxi-rs", rev = "0f9e60f9345482ea017297038b42cb090924d29f" }
lazy_static = "1.2.0"
bitflags = "1.0"
